Migrate to JaCoCo `0.8.11`